@@ -1,3 +1,7 @@
+2012-12-26 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCval.c: inserted macros for strtoll and strtoull
+
 2012-12-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCC.y,
